--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
         <h2>Meus projetos</h2>
         <div class="row">
              <div class="col-md-4">
-                <div class="card" style="width: 18rem;">
-                    <img src="..." class="card-img-top" alt="...">
+                <div class="card" >
+                    <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de Criando uma Aventura">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-                      <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <h5 class="card-title">Criando uma Aventura</h5>
+                            <p class="card-text">Este projeto é uma página web que apresenta alguns caminhos para uma aventura. O jogo é feito com VScode.</p>
+                            <button type="button" class="btn btn-link">Veja o projeto</button>
                     </div>
                   </div>
              </div>
