--- a/index.html
+++ b/index.html
@@ -35,9 +35,32 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous">
         </script>
-    <main class="container">
+    <main class="container mt-5">
         <h2>Meus projetos</h2>
         <div class="row">
+            <!-- projeto 1 -->
+             <div class="col-md-4">
+                <div class="card" >
+                    <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de Criando uma Aventura">
+                    <div class="card-body">
+                            <h5 class="card-title">Criando uma Aventura</h5>
+                            <p class="card-text">Este projeto é uma página web que apresenta alguns caminhos para uma aventura. O jogo é feito com VScode.</p>
+                            <button type="button" class="btn btn-link">Veja o projeto</button>
+                    </div>
+                  </div>
+             </div>
+             <!-- projeto 2 -->
+             <div class="col-md-4">
+                <div class="card" >
+                    <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de Criando uma Aventura">
+                    <div class="card-body">
+                            <h5 class="card-title">Criando uma Aventura</h5>
+                            <p class="card-text">Este projeto é uma página web que apresenta alguns caminhos para uma aventura. O jogo é feito com VScode.</p>
+                            <button type="button" class="btn btn-link">Veja o projeto</button>
+                    </div>
+                  </div>
+             </div>
+             <!-- projeto 3 -->
              <div class="col-md-4">
                 <div class="card" >
                     <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de Criando uma Aventura">
@@ -49,6 +72,7 @@
                   </div>
              </div>
         </div>
+
     </main>
 </body>
 
