--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
              <!-- projeto 2 -->
              <div class="col-md-4">
                 <div class="card" >
-                    <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de Criando uma Aventura">
+                    <img src="img/projeto-2.png" class="card-img-top" alt="Imagem do projeto VivianFlix">
                     <div class="card-body">
-                            <h5 class="card-title">Criando uma Aventura</h5>
-                            <p class="card-text">Este projeto é uma página web que apresenta alguns caminhos para uma aventura. O jogo é feito com VScode.</p>
+                            <h5 class="card-title">VivianFlix</h5>
+                            <p class="card-text">Este projeto é uma página web que apresenta recomendações de vídeos sobre cinema. O jogo é feito com VScode.</p>
                             <button type="button" class="btn btn-link">Veja o projeto</button>
                     </div>
                   </div>
