--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="pt-br">
 
 <head>
@@ -32,9 +32,7 @@
             </div>
         </header>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous">
-        </script>
+    
     <main class="container mt-5">
         <h2>Meus projetos</h2>
         <div class="row">
@@ -44,8 +42,10 @@
                     <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de Criando uma Aventura">
                     <div class="card-body">
                             <h5 class="card-title">Criando uma Aventura</h5>
-                            <p class="card-text">Este projeto é uma página web que apresenta alguns caminhos para uma aventura. O jogo é feito com VScode.</p>
-                            <button type="button" class="btn btn-link">Veja o projeto</button>
+                            <p class="card-text">Este projeto é uma página web que apresenta alguns caminhos para uma aventura. O jogo é feito com VScode.    
+                            </p>
+                            <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="Modal1">
+                                Launch demo modal>Veja o projeto</button>
                     </div>
                   </div>
              </div>
@@ -74,6 +74,19 @@
         </div>
 
     </main>
+
+    <footer class="container py-5">
+        <h2>Entre em contato!</h2>
+        <div>
+            <a href="https://github.com/Viviandacostamatheus">Github</a>
+        </div>
+        <p class="my-5 text-center">© Copyright 2025. Produzido por Vivian Costa</p>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js">
+        integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous">
+        </script>
+
 </body>
 
 </html>
